[package]
name = "rayca-pipeline"
version = "0.1.0"
edition = "2024"
authors = ["Antonio Caggiano <info@antoniocaggiano.eu>"]
description = "Rayca pipelines"
license = "MIT"
readme = "README.md"

[dependencies]
rayca-core = { git = "https://github.com/fahien/rayca-core.git" }
rayca-pipe = { git = "https://github.com/fahien/rayca-pipe.git" }
